<resources>
    <string name="app_name">MotorVibe</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- Preferences -->
    <string name="messages_header">App Settings</string>
    <string name="grid_preferences">Image Settings</string>

    <string name="motor_status_title">Default Motor Status</string>
    <string name="grid_mode_title">Grid mode</string>

    <string name="display_images_title">Display images</string>
    <string name="display_images_summary_off">Turn on to display images</string>
    <string name="display_images_summary_on">Turn off to hide images</string>
    <string name="small_images_title">Display small images</string>
    <string name="small_images_summary_off">Turn on to display small images</string>
    <string name="small_images_summary_on">Turn off to display normal images</string>

    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_settings">Settings</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_splash">splashActivity</string>

    <string name="login_error_authentication">There was a problem with user authentication</string>
    <string name="login_error_invalid_syntax">Email/Password invalid syntax</string>
    <string name="login_error_passwords">Passwords do not match</string>
    <string name="login_user_registered">User Registered</string>

    <string name="reading_invalid">Reading invalid syntax</string>
    <string name="bt_disconnected_device">Disconnected device</string>
    <string name="bt_connection_failed">Failed to connect to device</string>

    <string name="edt_motor_added">Motor Added</string>
    <string name="edt_invalid_syntax">Input Invalid Syntax</string>
    <string name="edt_motor_deleted">Motor Deleted</string>
    <string name="edt_motor_not_exists">Motor doesnt exists. Please select another name</string>
    <string name="edt_motor_exists">Motor already exists. Please select another name</string>

    <string name="plot_title">Acceleration Readings [mm/s²]e</string>
</resources>